Align issue content to the left

--- a/style.css
+++ b/style.css
@@ -247,7 +247,7 @@ a.ig:hover {
   }
 
   .issue {
-    justify-content: center;
+    justify-content: left;
     width: 100%;
     padding: 10px 0 !important;
   }
